# xflow_demo

./: CMakeLists.txt  README.md  build.sh  kill.sh  mapfeat.py  run_ps_local.sh  work.sh
ps-lite/: README.md
ps-lite/include/ps/: kv_app.h
src/base/: base.h
src/io/: load_data_from_disk.cc
src/model/: main.cc  server.h
src/model/fm/: fm_worker.cc  fm_worker.h
src/optimizer/: adadelta.h  adagrad.h  ftrl.h  mosgd.h  rmsprop.h  sgd.h
